--- a/openApiDocs/v1.0/Files.yml
+++ b/openApiDocs/v1.0/Files.yml
@@ -1756,11 +1756,11 @@ paths:
     patch:
       tags:
         - drives.driveItem
-      summary: Update DriveItem properties
-      description: Update the metadata for a driveItem by ID or path. You can also use update to move an item to another parent by updating the item's **parentReference** property.
+      summary: Move a DriveItem to a new folder
+      description: "To move a DriveItem to a new parent item, your app requests to update the **parentReference** of the DriveItem to move. This is a special case of the Update method.\nYour app can combine moving an item to a new container and updating other properties of the item into a single request. Items cannot be moved between Drives using this request."
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/driveitem-update?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/driveitem-move?view=graph-rest-1.0
       operationId: drive_UpdateItem
       parameters:
         - name: drive-id
@@ -26988,11 +26988,11 @@ paths:
     patch:
       tags:
         - groups.drive
-      summary: Update DriveItem properties
-      description: Update the metadata for a driveItem by ID or path. You can also use update to move an item to another parent by updating the item's **parentReference** property.
+      summary: Move a DriveItem to a new folder
+      description: "To move a DriveItem to a new parent item, your app requests to update the **parentReference** of the DriveItem to move. This is a special case of the Update method.\nYour app can combine moving an item to a new container and updating other properties of the item into a single request. Items cannot be moved between Drives using this request."
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/driveitem-update?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/driveitem-move?view=graph-rest-1.0
       operationId: group.drive_UpdateItem
       parameters:
         - name: group-id
@@ -60693,11 +60693,11 @@ paths:
     patch:
       tags:
         - users.drive
-      summary: Update DriveItem properties
-      description: Update the metadata for a driveItem by ID or path. You can also use update to move an item to another parent by updating the item's **parentReference** property.
+      summary: Move a DriveItem to a new folder
+      description: "To move a DriveItem to a new parent item, your app requests to update the **parentReference** of the DriveItem to move. This is a special case of the Update method.\nYour app can combine moving an item to a new container and updating other properties of the item into a single request. Items cannot be moved between Drives using this request."
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/driveitem-update?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/driveitem-move?view=graph-rest-1.0
       operationId: user.drive_UpdateItem
       parameters:
         - name: user-id
@@ -84782,7 +84782,7 @@ components:
               nullable: true
             isFavorite:
               type: boolean
-              description: true if the user has flagged this person as a favorite.
+              description: True if the user has flagged this person as a favorite.
               nullable: true
             jobTitle:
               type: string
