--- a/openApiDocs/beta/Users.Functions.yml
+++ b/openApiDocs/beta/Users.Functions.yml
@@ -15420,39 +15420,6 @@ paths:
       x-ms-pageable:
         nextLinkName: '@odata.nextLink'
         operationName: listMore
-  '/users/{user-id}/managedDevices/{managedDevice-id}/microsoft.graph.getOemWarranty()':
-    get:
-      tags:
-        - users.Functions
-      summary: Invoke function getOemWarranty
-      operationId: user.managedDevice_getOemWarranty
-      parameters:
-        - name: user-id
-          in: path
-          description: The unique identifier of user
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: user
-        - name: managedDevice-id
-          in: path
-          description: The unique identifier of managedDevice
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: managedDevice
-      responses:
-        2XX:
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.oemWarranty'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: function
   '/users/{user-id}/managedDevices/microsoft.graph.appDiagnostics(upn=''{upn}'')':
     get:
       tags:
@@ -20008,6 +19975,7 @@ components:
               nullable: true
             isManagementRestricted:
               type: boolean
+              description: 'true if the device is a member of a restricted management administrative unit, in which case it requires a role scoped to the restricted administrative unit to manage. Default value is false. Read-only.'
               nullable: true
             isRooted:
               type: boolean
@@ -20473,6 +20441,7 @@ components:
               nullable: true
             isManagementRestricted:
               type: boolean
+              description: 'Indicates whether the group is a member of a restricted management administrative unit, in which case it requires a role scoped to the restricted administrative unit to manage. Default value is false. Read-only.'
               nullable: true
             licenseProcessingState:
               $ref: '#/components/schemas/microsoft.graph.licenseProcessingState'
@@ -21126,31 +21095,6 @@ components:
       additionalProperties:
         type: object
       description: Device Compilance Policy Setting State for a given device.
-    microsoft.graph.oemWarranty:
-      title: oemWarranty
-      type: object
-      properties:
-        additionalWarranties:
-          type: array
-          items:
-            $ref: '#/components/schemas/microsoft.graph.warrantyOffer'
-          description: List of additional warranty offers. This collection can contain a maximum of 100 elements.
-        baseWarranties:
-          type: array
-          items:
-            $ref: '#/components/schemas/microsoft.graph.warrantyOffer'
-          description: List of base warranty offers. This collection can contain a maximum of 100 elements.
-        deviceConfigurationUrl:
-          type: string
-          description: Device configuration page URL
-          nullable: true
-        deviceWarrantyUrl:
-          type: string
-          description: Device warranty page URL
-          nullable: true
-      additionalProperties:
-        type: object
-      description: OEM Warranty information for a given device
     microsoft.graph.powerliftIncidentMetadata:
       title: powerliftIncidentMetadata
       type: object
@@ -21895,6 +21839,7 @@ components:
               nullable: true
             isManagementRestricted:
               type: boolean
+              description: 'true if the user is a member of a restricted management administrative unit, in which case it requires a role scoped to the restricted administrative unit to manage. Default value is false. Read-only.'
               nullable: true
             isResourceAccount:
               type: boolean
@@ -21929,7 +21874,7 @@ components:
               nullable: true
             mobilePhone:
               type: string
-              description: 'The primary cellular telephone number for the user. Read-only for users synced from on-premises directory.  Supports $filter (eq, ne, not, ge, le, in, startsWith, and eq on null values).'
+              description: 'The primary cellular telephone number for the user. Read-only for users synced from on-premises directory.  Supports $filter (eq, ne, not, ge, le, in, startsWith, and eq on null values) and $search.'
               nullable: true
             officeLocation:
               type: string
@@ -25509,29 +25454,6 @@ components:
         - conflict
         - notAssigned
       type: string
-    microsoft.graph.warrantyOffer:
-      title: warrantyOffer
-      type: object
-      properties:
-        description:
-          type: string
-          description: Warranty offer description
-          nullable: true
-        endDateTime:
-          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
-          type: string
-          description: Warranty offer end date
-          format: date-time
-        startDateTime:
-          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
-          type: string
-          description: Warranty offer start date
-          format: date-time
-        type:
-          $ref: '#/components/schemas/microsoft.graph.warrantyType'
-      additionalProperties:
-        type: object
-      description: Models and Manufactures meatadata for managed devices in the account
     microsoft.graph.onenotePagePreviewLinks:
       title: onenotePagePreviewLinks
       type: object
@@ -25580,11 +25502,11 @@ components:
       properties:
         displayName:
           type: string
-          description: 'The display name of the identity. Note that this might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
+          description: The display name of the identity. This property is read-only.
           nullable: true
         id:
           type: string
-          description: Unique identifier for the identity.
+          description: The identifier of the identity. This property is read-only.
           nullable: true
       additionalProperties:
         type: object
@@ -27878,6 +27800,7 @@ components:
               nullable: true
             allowRecording:
               type: boolean
+              description: Indicates whether recording is enabled for the meeting.
               nullable: true
             allowTeamworkReactions:
               type: boolean
@@ -27885,6 +27808,7 @@ components:
               nullable: true
             allowTranscription:
               type: boolean
+              description: Indicates whether transcription is enabled for the meeting.
               nullable: true
             alternativeRecording:
               type: string
@@ -30744,31 +30668,6 @@ components:
         - deviceConfiguration
         - deviceIntent
       type: string
-    microsoft.graph.warrantyType:
-      title: warrantyType
-      enum:
-        - unknown
-        - manufacturer
-        - contractual
-        - unknownFutureValue
-      type: string
-      description: Models and Manufactures meatadata for managed devices in the account
-      x-ms-enum:
-        name: warrantyType
-        modelAsString: false
-        values:
-          - value: unknown
-            description: Unknown warranty type
-            name: unknown
-          - value: manufacturer
-            description: Manufacturer warranty
-            name: manufacturer
-          - value: contractual
-            description: Contractual warranty
-            name: contractual
-          - value: unknownFutureValue
-            description: Unknown future value
-            name: unknownFutureValue
     microsoft.graph.externalLink:
       title: externalLink
       type: object
@@ -36674,6 +36573,7 @@ components:
           items:
             type: string
             nullable: true
+          description: A collection of required plannerChecklistItems identifiers to complete the plannerTask.
       additionalProperties:
         type: object
     microsoft.graph.externalAudienceScope:
@@ -43140,18 +43040,22 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.attributeDefinition'
+          description: Defines attributes of the object.
         metadata:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.objectDefinitionMetadataEntry'
+          description: Metadata for the given object.
         name:
           type: string
+          description: Name of the object. Must be unique within a directory definition. Not nullable.
           nullable: true
         supportedApis:
           type: array
           items:
             type: string
             nullable: true
+          description: The API that the provisioning service queries to retrieve data for synchronization.
       additionalProperties:
         type: object
     microsoft.graph.workbookChartGridlinesFormat:
@@ -43332,14 +43236,17 @@ components:
       properties:
         expression:
           type: string
+          description: Equivalent expression representation of this attributeMappingSource object.
           nullable: true
         name:
           type: string
+          description: 'Name parameter of the mapping source. Depending on the type property value, this can be the name of the function, the name of the source attribute, or a constant value to be used.'
           nullable: true
         parameters:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.stringKeyAttributeMappingSourceValuePair'
+          description: 'If this object represents a function, lists function parameters. Parameters consist of attributeMappingSource objects themselves, allowing for complex expressions. If type is not Function, this property will be null/empty array.'
         type:
           $ref: '#/components/schemas/microsoft.graph.attributeMappingSourceType'
       additionalProperties:
